2019-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* panelayoutmanager, gridlayoutmanager: bug fixes here, and in the
	grid layoutmanager. I can't count.

2019-03-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Customizable combo-box appearance.

2019-03-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* list_appearance: separate object with settings for a list's visual
	appearance, used by the list layout manager, combo box layout manager,
	menu layout manager, et al...

	* booklayoutmanager: custom book tab appearance.

2019-03-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* button.C: Refactor create_button*(), using optional_args from
	libcxxbase.

0.19.0

2019-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement splash windows

2019-02-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* main_window.H: main_window_config stores the main
	window's application label and saved screen positions, and replaces
	these two parameters to the overloaded create_mainwindow().

	Add background_color to main_window_config, to set an initial custom
	main window background color.

2019-02-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add right pointer button context popups to the file dialog, with
	keyboard shortcuts, that implement simple file maintenance - delete
	and rename subdirectories and files, create new subdirectories.

2019-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* dialog_handler.C: Modal dialogs set _NET_WM_STATE to modal.

	* editor_impl.C: Blink the cursor only when window has focus.

	* file_dialog/file_dialog_impl.C: Add a right context popup menu
	in the file dialog (both the directory and the file section), that
	implement basic file operations.

	* dirlisting/filedirlist_manager_impl.C: Bug fix.

	* includes/x/w/main_windowobj.H: Redefine the parameters passed to
	standard dialogs' "Ok" and "Cancel" callbacks. Other dialog API
	tweaks and cleanups.

0.18

2019-02-11  Sam Varshavchik  <mrsam@courier-mta.com>
